--- a/projects/customblog.html
+++ b/projects/customblog.html
@@ -2,8 +2,8 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
-    <title>Image Generator</title>
-    <meta content="" name="descriptison">
+    <title>Custom Blog</title>
+    <meta content="" name="description">
     <meta content="" name="keywords">
   
     <!-- Favicons -->
@@ -43,18 +43,16 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">Image Generator</h2>
+              <h2 style="color:#12d640">Customizable Blog</h2>
               <ul>
-                <li><strong>Tech Stack</strong>: TJava, NodeJS, Python, HTML, CSS, Javascript, AWS(S3, EC2, SQS)</li>
-                <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/image_recognition_as_a_service" target="_blank">Project Link</a></li>
+                <li><strong>Tech Stack</strong>: HTML, Tailwind CSS, PHP, Blade, javascript </li>
+                <li><strong>Github URL</strong>: <a href="https://github.com/alifzidanr/custom-blog" target="_blank">Project Link</a></li>
               </ul>
   
               <p>
-                Built an elastic web application that automatically scales in and scales out 20 EC2 instances based on the traffic of current users with the help of AWS services. Created custom AMIs to deploy image recognition app on EC2 instance; used SQS to handle request and response.              </p>
+               A customizable blog template with carousel, simple search index and pagination</p>
               </p>
-              <p>
-                Deployed image recognition system on AWS for the clients to access and successfully tested the application by generating 1000 requests.              </p>
-              </p>
+              
             </div>
   
           </div>
