--- a/projects/tictactoe.html
+++ b/projects/tictactoe.html
@@ -2,8 +2,8 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
-    <title>Movie Recommender</title>
-    <meta content="" name="descriptison">
+    <title>Tic Tac Toe</title>
+    <meta content="" name="description">
     <meta content="" name="keywords">
   
     <!-- Favicons -->
@@ -37,25 +37,23 @@
   <!-- ======= Portfolio Details ======= -->
     <main id="main">
       <div id="portfolio-details" class="portfolio-details">
-        <div class="container">
+        <div class="container custom-container">
   
           <div class="row">
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">Music Streaming Website</h2>
+              <h2 style="color:#12d640">Simple Game of Tic Tac Toe</h2>
               <ul>
-                <li><strong>Tech Stack</strong>: Django, HTML, CSS, Bootstrap, AWS S3, Heroku</li>
-                <li><strong>Website URL</strong>: <a href="https://galvanic-music.herokuapp.com/" target="_blank">Link</a></li>
-                <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/MusicPlayer" target="_blank">Project Link</a></li>
+                <li><strong>Tech Stack</strong>: React, HTML, CSS, Bootstrap</li>
+                <li><strong>Github URL</strong>: <a href="https://github.com/alifzidanr/vitetest-tic_tac_toe" target="_blank">Project Link</a></li>
               </ul>
   
-              <p>
-                Django based music streaming website.             
-              </p>
-              <p>
-                User can register/login to the web app, play song, view detailed information of song, search song based on filters such as language and singers, create playlist, add/remove songs to/from playlist, add/remove songs to/from favourites, explore recently played songs.              
-              </p>
+                <p>
+                The classic Tic Tac Toe with two modes available, player vs player and player vs the undefeated AI. Try it
+                <a href="https://tictactoe-alifzidanr.web.app/" target="_blank">here</a>          
+                </p>
+                
             </div>
   
           </div>
