--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </nav><!-- .nav-menu -->
 
       <div class="social-links">
-          <a href="https://www.linkedin.com/in/alif-zidan-9313a7180" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/alif-zidan-9836ab2a8/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://www.github.com/alifzidanr" target="_blank" class="github"><i class="bx bxl-github"></i></a>
           <a href="mailto:alifzidanr@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
 
@@ -218,39 +218,41 @@
   
 
 
-    <!-- <div class="portfolio">
+    <div class="portfolio">
     <div class="container">
       <div class="section-title">
         <h2>Online Certification</h2>
-      </div> -->
+      </div> 
 
-      <!-- <div class="row portfolio-container" style="position: relative; height: 437.75px;">
+      <div class="row portfolio-container" style="position: relative; height: 437.75px;">
 
-         <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
           <div class="portfolio-wrap">
-            <img src="assets/img/certification/stanford.jpg" class="img-fluid" alt="">
+            <img src="assets/img/certification/figmaa.png" class="img-fluid white-background" alt="">
             <div class="portfolio-info">
-              <h4>Machine Learning</h4>
+              <h4>Figma Basics</h4>
               <div class="portfolio-links">
-                <a href="https://www.coursera.org/account/accomplishments/certificate/2BTJ636Q2E93?utm_medium=certificate&amp;utm_source=link&amp;utm_campaign=copybutton_certificate/" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
+                <a href="https://coursera.org/share/8d25a043c2ebdfd5e233d219d5d25728" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
               </div>
             </div>
-           </div>
-          </div> -->
+          </div>
+        </div>
+        
+        
 
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 370px; top: 0px;">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 370px; top: 0px;">
           <div class="portfolio-wrap">
-            <img src="assets/img/certification/stanford.jpg" class="img-fluid" alt="">
+            <img src="assets/img/certification/awsss.png" class="img-fluid white-background" alt="">
             <div class="portfolio-info">
-              <h4>Algorithms-Design and Analysis</h4>
+              <h4>AWS Cloud Practitioner</h4>
               <div class="portfolio-links">
-                <a href="https://www.coursera.org/account/accomplishments/certificate/6THRQXYE9EHZ?utm_medium=certificate&amp;utm_source=link&amp;utm_campaign=copybutton_certificate" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
+                <a href="https://drive.google.com/file/d/1GUQOQQHjvOSP7U5TFSpgXLnOV-pWvp4l/view?usp=sharing" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 740px; top: 0px;">
+        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 740px; top: 0px;">
           <div class="portfolio-wrap">
             <img src="assets/img/certification/ucsd.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -495,7 +497,7 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="https://www.linkedin.com/in/alif-zidan-9313a7180" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/alif-zidan-9836ab2a8/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               <a href="https://www.github.com/alifzidanr" target="_blank" class="github"><i class="bx bxl-github"></i></a>
               <a href="mailto:alifzidanr@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
 
